--- a/learndotnet/learndotnet.csproj
+++ b/learndotnet/learndotnet.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Frontend\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
 </Project>
